<resources>
    <string name="app_name">Hold\'em Pucker</string>
    <string name="app_name_for_main_menu">Hold\'em\nPucker</string>
    <string name="full_card_deck_amount">52</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="dialog_back_header">Are you sure?</string>
    <string name="dialog_back_message">You are about to go back to main menu. If doing so, you\'ll lose all the progress.</string>
    <string name="dialog_back_message_online">You are about to forfeit the game.</string>
    <string name="dialog_back_positive">Yes</string>
    <string name="dialog_back_positive_online">Yes, forfeit</string>
    <string name="dialog_back_negative">No, stay!</string>
    <string name="dialog_lobby_header">Name the lobby</string>
    <string name="dialog_lobby_positive">Done</string>
    <string name="dialog_lobby_password_required">Password:</string>
    <string name="opponent_disconnected">Your opponent forfeited.\nYou won!</string>
    <string name="warning_online_beta">This online feature is currently in beta.\nPlease click here to report bugs.</string>
    <string name="bot_inputting">CPU\'s\nmoving...</string>
    <string name="opponent_inputting">Opponent\'s\nmoving...</string>
    <string name="version">v%s</string>
    <string name="no_lobbies_available">No lobbies available.\nGo ahead and create one!</string>

    <!-- HOW TO PLAY -->
    <string name="htp_how_game_works">
        This is a card game based on ice hockey! Full card deck (52 cards) represents a
        period. 3 periods will be played, followed by overtime if needed.\nSimple as that.
    </string>
    <string name="htp_add_players">
        Both teams need to be fulfilled before the game can start. Choose your positions
        for the cards wisely!\n\nHint: Center is an important position.
    </string>
    <string name="htp_attack_players">
        Now it is time to attack! You can only attack another card whose rank is equal or less
        to your playing card. The center and one of the forwards need to be eliminated before you can attack any defender.
    </string>
    <string name="htp_restore_players">
        When you have been attacked and lost any players, you need to restore your team before
        you can counter-attack.\n\nGood luck!
    </string>

</resources>
